--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ nav .morganzone .text{
     background-color: blue;
     border-radius: 60px;
     justify-items: center;
-    height: 25px;
+    height: 20px;
     margin: 2px;
     text-align: center;
     width: 65px;
@@ -82,4 +82,11 @@ main {
         grid-template-rows: 0.4fr 0.4fr 2.2fr 1.2fr;
         grid-template-areas: "nav" "sidebar" "main" "content1";
     }
+}
+
+#content1{
+    display:block;
+    grid-template-rows:1fr 1fr 1fr;
+    margin:10px;
+    justify-content: space-around;
 }
