--- a/style.css
+++ b/style.css
@@ -89,4 +89,16 @@ main {
     grid-template-rows:1fr 1fr 1fr;
     margin:10px;
     justify-content: space-around;
+    color:gray;
+    background-color: beige;
+    border-radius: 38px;
+}
+#content1 .deuxiemepartie{
+    display:block;
+    grid-template-rows:1fr 1fr 1fr;
+    margin:10px;
+    justify-content: space-around;
+    color:gray;
+    background-color:beige;
+    border-radius: 38px;
 }
