--- a/style.css
+++ b/style.css
@@ -5,12 +5,12 @@
 
 .container {
     display: grid;
-    height: 100vh;
+    /*     height: 100vh; */
     grid-template-columns: 1fr 1fr 1fr 1fr;
     grid-template-rows: 0.2fr 1.5fr 1.2fr 0.8fr;
     grid-template-areas: "sidebar nav nav nav" "sidebar main main content1" "sidebar main main content1" "sidebar main main content1 ";
     /*   grid-gap: 3px; */
-    font-family: Roboto sans-serif;
+    font-family: Roboto;
 }
 
 nav {
@@ -26,9 +26,22 @@ main {
     display: grid;
 }
 
+main h4 {
+    padding-left: 20px;
+    font-family: Roboto sans-serif;
+}
+
 main .cont-carte {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr;
+}
+
+main .cont-carte p {
+    color: #9ca3af;
+}
+
+main .cont-carte h3 {
+    font-size: 16px;
 }
 
 main .cont-carte .carte {
