feat:travail sur agent:deuxiemepartie

--- a/style.css
+++ b/style.css
@@ -79,33 +79,35 @@ main {
 @media only screen and (max-width: 550px) {
     .container {
         grid-template-columns: 1fr;
-        grid-template-rows: 0.4fr 0.4fr 2.2fr 1.2fr;
+        grid-template-rows: 0.4fr 0.4fr 2.4fr 1fr;
         grid-template-areas: "nav" "sidebar" "main" "content1";
     }
 }
 
 #content1{
     display:block;
-    grid-template-rows:1fr 1fr 1fr;
+    grid-template-rows:1fr 1fr;
     
 }
 .corps{
-    margin:10px;
+   padding: 25px;
     justify-content: space-around;
     color:gray;
     background-color: beige;
     border-radius: 38px;
 }
 .deuxiemepartie{
-    display:flex;
+    display:grid;
     flex-wrap: wrap;
     flex-direction: row;
+    margin-top: 20px;
 }
 .deuxiemepartie .agents{
 justify-content: space-around;
 background-color:beige;
 border-radius: 38px;
 margin:5px;
+padding: 25px;
 }
 .deuxiemepartie .agent{
     display: grid;
@@ -118,5 +120,10 @@ margin:5px;
     }
 .agents img{
     width: 100px;
+    border-radius: 50%;
+}
+#content1 .premierepartie h3{
+    font-size: bold;
+    color:black;
 }
 
